--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postprocessing": "^6.37.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "rough-notation": "^0.5.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
